--- a/qixi.html
+++ b/qixi.html
@@ -15,7 +15,7 @@
         margin-left: -25px;
         width: 8px;
         height: 8px;
-        background: url("./flower.png"); 
+        background: url("./flower.png") center; 
         background-size: 16px 16px;
     }
     </style>
